[package]
name = "solana-bulletproofs"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-zk-token-sdk = "1.17.17"
solana-ristretto = { version = "0.1.0", path = "../solana-ristretto" }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha3 = { version = "0.8", default-features = false }
